FIX: Removed styling changes due to wrapping breadcrumb in <nav>

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 
+.breadcrumb {
+	background-color: transparent;
+	height: auto;
+	width: auto;
+}
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
